# drift-competitions

./: .env.example  .gitignore  .prettierrc.js  Anchor.toml  Dockerfile  Makefile  README.md  bun.lockb  measurement.txt  package.json
.github/workflows/: main.yml  on-sdk-update.yml
.husky/: pre-commit
deploy-scripts/: build-devnet.sh  deploy-devnet.sh
programs/drift-competitions/: Cargo.toml
programs/drift-competitions/src/: error.rs  lib.rs  signer_seeds.rs  tests.rs  utils.rs
programs/drift-competitions/src/instructions/: claim_entry.rs  claim_multiple_entries.rs  claim_winnings.rs  close_competitor.rs  close_randomness_request.rs  constraints.rs  initialize_competition.rs  initialize_competitor.rs  mod.rs  receive_randomness.rs  request_randomness.rs  settle.rs  settle_competition.rs  settle_competitor.rs  settle_winner.rs  update_competition.rs  update_competitor_status.rs  update_switchboard_function.rs
programs/drift-competitions/src/state/: competition.rs  competitor.rs  events.rs  mod.rs
scripts/: donateForEntries.ts  mineAdditionalEntries.ts  settle-competition-round.sh  settleCompetitionRound.ts
switchboard-function/: Cargo.toml
switchboard-function/src/: main.rs  params.rs
tests/: driftCompetitions.ts  testHelpers.ts
ts/sdk/: bun.lockb  package.json  project.json  tsconfig.json
ts/sdk/src/: addresses.ts  competitionClient.ts  constants.ts  index.ts  name.ts  switchboard.ts  utils.ts
ts/sdk/src/accountSubscribers/: index.ts  pollingCompetitionSubscriber.ts  pollingCompetitorSubscriber.ts  pollingProgramAccountSubscriberBase.ts
(+16 files in other folders)
