[package]
name = "drift-competitions"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "drift_competitions"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.27.0"
anchor-spl = "0.27.0"
drift = { git = "https://github.com/drift-labs/protocol-v2.git", rev = "e95874", features = ["cpi", "mainnet-beta"]}
bytemuck = { version = "1.4.0" }
static_assertions = "1.1.0"
drift-macros = { git = "https://github.com/drift-labs/drift-macros.git", rev = "c57d87" }
switchboard-solana = "0.27.20"
getrandom = { version = "0.2.2", features = ["custom"] }